syntax = "proto3";
package dfs;
option go_package = ".;pb";

import "google/protobuf/empty.proto";
import "tagger/tagger.proto"; // see: github.com/srikrsna/protoc-gen-gotag

// DataGuide is the service for working with file chunks.
service DataGuide {
	// Read creates reading streaming by dividing big chunk to serie of small chunks.
	rpc Read (Range) returns (Chunk) {}
	// Write receives serie of small chunks and glue them into big one.
	rpc Write (stream Chunk) returns (Summary) {}
	// GetRange returns bounds of stored file chunk.
	// Returns empty struct if no such chunk is present.
	rpc GetRange(FileID) returns (Range) {}
	// Remove deletes file chunks.
	rpc Remove(FileID) returns (Range) {}
	// Purge deleted all file chunks.
	rpc Purge(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

// FileID is ID of file.
message FileID {
	int64 id = 1;
}

// Range contains information about chunk bounds of file with given ID.
message Range {
	int64 node_id = 1 [(tagger.tags) = "json:\"node_id\""];
	int64 file_id = 2 [(tagger.tags) = "json:\"file_id\""];
	int64 from = 3 [(tagger.tags) = "json:\"from\""]; // chunk start in file
	int64 to = 4 [(tagger.tags) = "json:\"to\""]; // chunk end in file
}

// Chunk body.
message Chunk {
	Range range = 1;
	bytes value = 2;
}

// Summary result of chunks write streaming.
message Summary {
	// The duration of the traversal in nanoseconds.
	int64 elapsed_time = 1;
	// The number of chunks received.
	int32 chunk_count = 2;
}

// The end.
